--- a/library.bib
+++ b/library.bib
@@ -229,3 +229,35 @@ howpublished = {\url{https://github.com/rurban/smhasher}},
 commit = {aea4c21044176f88f1f9e1a2a91a7c8a662254cf},
 url = {https://github.com/rurban/smhasher}
 }
+
+@inproceedings{layer-of-maxima,
+  title={Three-dimensional layers of maxima},
+  author={Buchsbaum, Adam L and Goodrich, Michael T},
+  booktitle={European Symposium on Algorithms},
+  pages={257--269},
+  year={2002},
+  organization={Springer}
+}
+
+@article{nacl,
+  title={Cryptography in NaCl},
+  author={Bernstein, Daniel J},
+  journal={Networking and Cryptography library},
+  volume={3},
+  pages={385},
+  year={2009}
+}
+
+@Misc{codetables.de,
+  author =       "Grassl, Markus",
+  title =        "{Bounds on the minimum distance of linear codes and quantum codes}",
+  howpublished = "Online available at \url{http://www.codetables.de}",
+  year =         "2007",
+  note =         "Accessed on 2020-12-19"
+}
+
+@book{redundant-zeroless,
+  title={Numerical representations as higher order nested datatypes},
+  author={Hinze, Ralf},
+  year={1998}
+}
