--- a/library.bib
+++ b/library.bib
@@ -261,3 +261,18 @@ url = {https://github.com/rurban/smhasher}
   author={Hinze, Ralf},
   year={1998}
 }
+
+@article{lsm-survey,
+  author    = {Chen Luo and
+               Michael J. Carey},
+  title     = {LSM-based Storage Techniques: {A} Survey},
+  journal   = {CoRR},
+  volume    = {abs/1812.07527},
+  year      = {2018},
+  url       = {http://arxiv.org/abs/1812.07527},
+  archivePrefix = {arXiv},
+  eprint    = {1812.07527},
+  timestamp = {Tue, 01 Jan 2019 15:01:25 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1812-07527.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
